@@ -89,14 +89,15 @@ Info << "===> field theta" << phaseName << " computed, min = " << gMin(theta.int
 }
 
 //- To protect boundary cell from refining
-DynamicList<label> boundary_protected_cells(0);
-const polyBoundaryMesh& patches = mesh.boundaryMesh();
-forAll(patches, patchi)
-{
-    if (not(isA<processorPolyPatch>(patches[patchi])) &&
-    not(isA<emptyPolyPatch>(patches[patchi])) )
-    {
-        boundary_protected_cells.append(mesh.boundary()[patchi].faceCells());
+if (isA<dynamicRefineFvMesh>(mesh)) {
+    DynamicList<label> boundary_protected_cells(0);
+    const polyBoundaryMesh& patches = mesh.boundaryMesh();
+    forAll(patches, patchi) {
+        if (not(isA<processorPolyPatch>(patches[patchi])) &&
+                not(isA<symmetryPlanePolyPatch>(patches[patchi])) ){
+            boundary_protected_cells.append(mesh.boundary()[patchi].faceCells());
+        }
     }
+    refCast<dynamicRefineFvMesh>(mesh).protectedCell() = bitSet(boundary_protected_cells);
 }
-refCast<dynamicRefineFvMesh>(mesh).protectedCell() = bitSet(boundary_protected_cells);
+
